RMI structure create